# vaultic-crypto-engine

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  publish.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
src/: lib.rs
src/crypto/: keypair_protection.rs  message.rs  mod.rs  rsa.rs
src/crypto/aes/: aes_gcm.rs  mod.rs
src/crypto/bindings/: aes.rs  ecdh.rs  ecdsa.rs  mod.rs
src/crypto/ecc/: ecdh.rs  ecdsa.rs  mod.rs
src/crypto/kdf/: hkdf.rs  mod.rs  pbkdf2.rs
src/crypto/rsa/: keypair.rs  mod.rs  rsa.rs
src/models/: ecc.rs  encrypted_data.rs  keypair.rs  mod.rs  protected_message.rs
src/utils/: base64.rs  crypto.rs  mod.rs  random.rs  time.rs
tests/: crypto_security_suite.rs  ecc_tests.rs  ecdh_encryption_tests.rs  kdf_tests.rs  key_protection_tests.rs  key_unprotection_tests.rs  message_protection_tests.rs  raw_message_unprotection_tests.rs  rsa_hybrid.rs  rsa_tests.rs  rsa_vectors.rs
