[package]
name = "vaultic-crypto-engine"
version = "0.1.3"
edition = "2024"
description = "A cryptographic engine for secure RSA operations in Rust and WebAssembly"
repository = "https://github.com/vaultic-org/vaultic-crypto-engine"
license = "MIT"
readme = "README.md"
categories = ["cryptography", "wasm"]
keywords = ["crypto", "rsa", "encryption", "wasm", "vaultic"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rsa = "0.9.2"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] } # important pour OsRng en WASM
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"

[dev-dependencies]
criterion = "0.5"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]