[package]
name = "vaultic-crypto-engine"
version = "0.1.5"
edition = "2024"
description = "A cryptographic engine for secure RSA operations in Rust and WebAssembly"
repository = "https://github.com/vaultic-org/vaultic-crypto-engine"
license = "MIT"
readme = "README.md"
categories = ["cryptography", "wasm"]
keywords = ["crypto", "rsa", "encryption", "wasm", "vaultic"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen/serde-serialize"]

[dependencies]
rsa = "0.9.2"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] } # important pour OsRng en WASM
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.5"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"
aes-gcm = "0.10.3"
hmac = "0.12"
pbkdf2 = "0.12"
sha2 = "0.10"

[dev-dependencies]
criterion = "0.5"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]

[package.metadata.wasm-pack]
scope = "vaultic"